ressources/pma/04-phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: projet-pma
  labels:
    app: phpmyadmin
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: frontend
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin:5
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: projet-pma
  labels:
    app: phpmyadmin
    tier: frontend
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
