ressources/pma/06-httproute-pma.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phpmyadmin
  namespace: projet-pma
spec:
  parentRefs:
    - name: main-gateway
      namespace: projet-pma
  hostnames:
    - "pma.local"
  rules:
    - backendRefs:
        - name: phpmyadmin
          port: 80
